--- a/programs/test.tt
+++ b/programs/test.tt
@@ -528,7 +528,7 @@ function testcmp() {
 	call assert( >( $cmp( 1 0 ) 0 ), ${-} );
 	call assert( <( $cmp( 0 1 ) 0 ), ${-} );
 	call assert( >( $cmp( "a" 0 ) 0 ), ${-} );
-	call assert( <( $cmp( 0 "a" ) 0 ), ${-} );
+	call assert( <( $cmp( 0 "" ) 0 ), ${-} );
 	call assert( =( $cmp( "" "" ) 0 ), ${-} );
 	call assert( =( $cmp( "0" "0" ) 0 ), ${-} );
 	call assert( =( $cmp( STR "*" ) 0 ), ${-} );
