--- a/programs/util.tt
+++ b/programs/util.tt
@@ -1,5 +1,11 @@
 
 library util {
+	//# Constants for type expression.
+	const TYPE_STRING = $type( "" ),
+		TYPE_ELEMENT = $type( ${-} ),
+		TYPE_ARRAY = $type( $array( 0 ) ),
+		TYPE_FUNCTION = $type( $function( ${ (){} } ) );
+
 	//# Marker struct for string functions.
 	struct string {
 	}
@@ -67,7 +73,7 @@ library util {
 			let dest = this:expand( end );
 		}
 		while <( idx end ) {
-			let [ dest idx++ ] = $chr( str offset++ );
+			let [ dest idx++ ] = &( $chr( str offset++ ) 0xFF );
 		}
 		let this.len = end;
 	}
@@ -276,17 +282,17 @@ library util {
 	}
 
 	//# Copy the specified unsigned characters from the specified string into the specified array.
-	function string_get_chars( this offset len array ) {
-		var idx;
-		while <( offset len ) {
-			let [ array idx++ ] = &( $chr( this offset++ ) 0xFF );
+	function string_get_chars( this offset array index len ) {
+		var end = +( offset len );
+		while <( offset end ) {
+			let [ array index++ ] = &( $chr( this offset++ ) 0xFF );
 		}
 	}
 
 	//# Return an upper-case representation of the specified ASCII string.
 	function string_upper( ( string ) this ) {
 		var len = $len( this ), ( array ) arr = $buffer( len );
-		call this:get_chars( 0 len arr );
+		call this:get_chars( 0 arr 0 len );
 		call arr:shift_case( 0 len 97 122 -32 );
 		return $sub( arr 0 len );
 	}
@@ -294,7 +300,7 @@ library util {
 	//# Return an upper-case representation of the specified ASCII or ISO-8859-1 encoded string.
 	function string_upper_latin( ( string ) this ) {
 		var len = $len( this ), ( array ) arr = $buffer( len );
-		call this:get_chars( 0 len arr );
+		call this:get_chars( 0 arr 0 len );
 		call arr:upper( len );
 		return $sub( arr 0 len );
 	}
@@ -302,7 +308,7 @@ library util {
 	//# Return a lower-case representation of the specified ASCII string.
 	function string_lower( ( string ) this ) {
 		var len = $len( this ), ( array ) arr = $buffer( len );
-		call this:get_chars( 0 len arr );
+		call this:get_chars( 0 arr 0 len );
 		call arr:shift_case( 0 len 65 90 32 );
 		return $sub( arr 0 len );
 	}
@@ -310,7 +316,7 @@ library util {
 	//# Return a lower-case representation of the specified ASCII or ISO-8859-1 encoded string.
 	function string_lower_latin( ( string ) this ) {
 		var len = $len( this ), ( array ) arr = $buffer( len );
-		call this:get_chars( 0 len arr );
+		call this:get_chars( 0 arr 0 len );
 		call arr:lower( len );
 		return $sub( arr 0 len );
 	}
@@ -347,6 +353,11 @@ library util {
 			}
 		}
 		return -1;
+	}
+
+	//# Return a copy of this string with the specified string value inserted at the specified index.
+	function string_insert( this, value, index ) {
+		return $str( $sub( this 0 index ) value $sub( this index -( $len( this ) index ) ) );
 	}
 
 	//# Decode the specified UTF-8 encoded string into the specified array.
@@ -414,7 +425,7 @@ library util {
 	//# Encode the specified ISO-8859-1 encoded string as UTF-8.
 	function string_utf8_encode( ( string ) this ) {
 		var len = $len( this ), ( array ) arr = $buffer( len );
-		call this:get_chars( 0 len arr );
+		call this:get_chars( 0 arr 0 len );
 		return arr:utf8_encode( 0 len );
 	}
 
@@ -422,12 +433,16 @@ library util {
 	function trace_to_string( trace ) {
 		var ( list ) list = new_list(), msg = $str( trace );
 		call list:add_chars( msg 0 $len( msg ) );
-		if >( $type( trace ) 1 ) {
+		if $eq( $type( trace ) TYPE_ARRAY ) {
 			var idx, len = $len( trace );
 			while <( idx len ) {
 				var func = [ trace idx++ ];
-				let msg = $cat( "\nOn line " $tup( 0 func ) " of '" func "()' in file '" $src( func ) "'." );
-				call list:add_chars( msg 0 $len( msg ) );
+				if $eq( $type( func ) TYPE_FUNCTION ) {
+					let msg = $cat( "\nOn line " $tup( 0 func ) " of '" func "()' in file '" $src( func ) "'." );
+					call list:add_chars( msg 0 $len( msg ) );
+				} else {
+					break;
+				}
 			}
 		}
 		return $sub( list.array 0 list.len );
