--- a/programs/test.tt
+++ b/programs/test.tt
@@ -765,6 +765,7 @@ function teststruct() {
 	call assert_equals( 7, $len( $new( exten ) ), ${-} );
 	call assert_equals( 1, exten.f( obj ), ${-} );
 	call assert_equals( 2, obj.g, ${-} );
+	call assert_equals( "[exten]", obj, ${-} );
 	call assert_throws( "Field 'struc.xxx' not declared", ${ () { call struc.xxx; } } );
 	call assert_throws( "Wrong number", ${ () { call struc.a( 0 0 ); } } );
 	call assert_throws( "Not an instance", ${ () { call struc.a( 0 ); } } );
