Improve string find function.

--- a/programs/util.tt
+++ b/programs/util.tt
@@ -344,8 +344,7 @@ library util {
 			}
 			var end = +( idx++ sublen ), subidx = 1;
 			let offset = idx;
-			while &&( <( idx end ) =( $chr( this idx ) $chr( substr subidx ) ) ) {
-				inc subidx;
+			while &&( <( idx end ) =( $chr( this idx ) $chr( substr subidx++ ) ) ) {
 				inc idx;
 			}
 			if >e( idx end ) {
